# KinectUSS

./: .gitignore  KinectPresentacion.py  KinectStreaming.py  README.md  Test1.csv  p2.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
Kinect/: CMakeLists.txt  config.conf  kinect.md  manos.py
Kinect/BodySkeletonTracker/: CMakeLists.txt
Kinect/BodySkeletonTracker/OpenNI-Linux-x64-2.2/: OpenNIDevEnvironment
Kinect/BodySkeletonTracker/src/: SampleViewer.cpp
Kinect/KinectSUS/: CMakeLists.txt  camera_params.h  cloud.cpp  envio.py  kinect.cpp  main.cpp  menu.cpp  menu.h  utils.cpp  utils.h
Kinect/KinectSUS/good/: CMakeCache.txt  KinectSUS  Makefile  cmake_install.cmake
Kinect/KinectSUS/headers/: menu.h
Kinect/KinectSUS/include/: menu.h  utils.h
Kinect/KinectSUS/src/: cloud.cpp  main.cpp  mainMenu.cpp  menu.cpp  utils.cpp
Kinect/KinectSUS/test/: CMakeCache.txt  KinectSUS  Makefile  cmake_install.cmake
Kinect/QT_Menu/: Menu_principal.ui  mainMenu.cpp  ui_Menu_principal.h
Kinect/include/: log.h  utils.h
Kinect/libfreenect2/: CMakeLists.txt
Kinect/libfreenect2/src/: cuda_depth_packet_processor.cu  opencl_depth_packet_processor.cpp  opencl_kde_depth_packet_processor.cpp
Kinect/libfreenect2/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  freenect2-openni2.vcxproj  freenect2-openni2.vcxproj.filters  freenect2.pc  freenect2.vcxproj  freenect2.vcxproj.filters  freenect2Config.cmake  generate_resources_tool.vcxproj  generate_resources_tool.vcxproj.filters  install-openni2.vcxproj  install-openni2.vcxproj.filters  libfreenect2.sln  resources.inc.h
Kinect/libfreenect2/test/doc/: INSTALL.vcxproj  INSTALL.vcxproj.filters
Kinect/libfreenect2/test/examples/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Protonect.vcxproj  Protonect.vcxproj.filters  libfreenect2_examples.sln
Kinect/libfreenect2/test/libfreenect2/: config.h
Kinect/src/: cloud.cpp  kinect.cpp  main.cpp  menu.cpp  utils.cpp
Kinect/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  KinectSUS.sln  KinectSUS.vcxproj  KinectSUS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Kinect/test_2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  KinectSUS.sln  KinectSUS.vcxproj  KinectSUS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
KinectIA/: KinectMain.py  config.ini  imports.py
KinectIA/LogicAI/: Body_track.py
KinectIA/Tools/: Frame_receptor.py  playback_opencv.py  playback_plt.py
KinectPi/: CMakeLists.txt  config.conf
KinectPi/include/: utils.h
KinectPi/src/: kinect.cpp  main.cpp  mainMenu.cpp_prototype  utils.cpp
MediaPipe/: Bodyanglecalculator.py  Bodytracking.py  Handsanglecalculator.py  Handstracking.py  KinectMain.py  KinectSus-p-o.py  KinectSus-python.py  frame.py  manos.py  mediapipe.md  menu.py  og.py  optimizate-tracking2.py  optimizate_tracking.py  otro.py  p2.py  server_connect.py  stream.py  stream_definitivo.py  susweb.py  suswebtest.py  testcamera.py
MediaPipe/Gui/: KinectMain.py  main.py
MediaPipe/Logica/: Bodyanglecalculator.py  Bodytracking.py
MediaPipe/Servicio/: KinectSus.py  Tesupremo.py
MediaPipe/Servicio/KinectTacking/: Kinectsus-C++.cpp
MediaPipe/Tesupremo/: KinectSus-python.py  KinectVideocamera.py  Multithead.py  OTBH.py  holistic.py  kinectholistic.py  kinectvideo-test.py  optimizate-tracking3-Videocamera.py  otbh-test.py  p2.py  susweb-test.py  susweb.py  susweb2.py
MediaPipe/utiles/: frame.py  server_connect.py  stream.py  susweb2.py
Webkinect/: frame.py  index.html  package-lock.json  package.json  server.js
doc/: correr_kinect.md  correr_mediapipe.md
kinectUSSV2/kinectUSSV2/: config.py  main.py
kinectUSSV2/kinectUSSV2/utiles/: utiles_ventana.py
kinectia/: 2d.py  3d.py  3d2.py  Kinect_Main.py  Test1.csv  comparator.py  holistic3d.py  maomenos3d.py  mediapipe.md  mi_escena.blend  movimiento.csv  susrecibe.py
kinectia/Gui/: Kinect_Main.py  Menu_main.py
kinectia/Logica/: Body_tracking.py  Bodyanglecalculator.py  Csv_handler.py  Handstracking.py
kinectia/Servicio/: Body_tracking.py  KinectSus-python.py  Prototipo3.1(unity3D).py  coordenadas.csv  frame_pb2.py  logicaGrabar.py  menu.py  p2.py  stream_definitivo.py  testcamera.py
kinectia/Servicio/KinectTacking/: CMakeLists.txt
kinectia/Viewer/: 3d  3d.cpp  lel  lel.cpp  pa compilar.txt  sus.csv
kinectia/utiles/: Frame_receptor.py  Kinect_cameras_receptor.py  PC_camer_streaming.py  config.py  susweb.py  suswebtest.py  utiles_ventana.py
